<resources>
    <string name="app_name">Evo.Zhuk</string>

    <string name="app_logo">evozhuk</string>
    <string name="hello_message">Hello</string>
    <string name="login_message">Login by</string>
    <string name="login">Login</string>
    <string name="password">Pin</string>
    <string name="forgot_pass_message">Forgot PIN?</string>
    <string name="login_bunt_text">Log in</string>
    <string name="device_name">Device name</string>
    <string name="returnMessage">Don`t forget to return the device on time</string>
    <string name="give_back_bunt_text">Return</string>
    <string name="deviceName">device name</string>
    <string name="youTableDeviceLabel">You took</string>
    <string name="time_choose_label">How long do you need\n</string>
    <string name="take_bunt_text">Take device</string>
    <string name="button_label_custom">text</string>
    <string name="oneHour">1 hour</string>
    <string name="twoHour">2 hours</string>
    <string name="foutHour">4 hours</string>
    <string name="tillSevenOClock">till 19:00</string>
    <string name="twoDays">2 days</string>
    <string name="anotherTime">another</string>
    <string name="inParkBack">Thank`s,\nI am back in park</string>
    <string name="time_choose_tool_bar">Choose the time</string>
    <string name="you_need_to_back_device_in_next_notif_message">You need to back device in next</string>
    <string name="chargeDeviceMessage">Put device on charging, please</string>


    <!-- Toast messages-->

    <string name="device_booked_message">Device successfully booked</string>
    <string name="device_is_not_booked_message">Can not book the device</string>
    <string name="device_returned_message">Device successfully returned</string>
    <string name="device_not_returned_message">Device was not successfully returned</string>
    <string name="device_registered_message">Device is registered in database</string>
    <string name="request_for_reset_success_message">Request for reset pin was sent</string>


    <!--Error messages-->
    <string name="invalid_pass_error_message">The password is not valid</string>
    <string name="invalid_login_error_message">The login or password is not valid</string>
    <string name="device_is_not_authorized_error_message">The device unauthorized</string>
    <string name="can_not_init_error_message">The device does not init</string>
    <string name="can_not_update_error_message">The device does not update</string>
    <string name="can_not_book_error_message">The device does not booked</string>
    <string name="can_not_return_error_message">The device does not booked</string>
    <string name="can_not_get_users_error_message">Users list is unavailable</string>
    <string name="can_not_remind_pin_error_message">Can not remind pin</string>
    <string name="unexpected_error_message">There is some unexpected error occurred</string>
    <string name="pass_is_empty_error_message">The password or login field is empty</string>
    <string name="request_for_reset_error_message">Request for reset pin was not sent</string>
    <string name="input_error_message">"Incorrect input"</string>


    <!-- Reset pass dialog -->
    <string name="reset_pass_dealog_title">Remind pin</string>
    <string name="reset_pass_dealog_message">Enter slack login please</string>
    <string name="reset_pass_dealog_pos_but">Send</string>


    <!-- Notification messages-->

    <string name="dont_forget_notification_title">Don`t forget to back device</string>
    <string name="time_is_up_notification_title">Your time is up in</string>


    <string name="model">Model</string>
    <string name="version">Version</string>
    <string name="id">MAC address</string>
    <string name="memory">Memory</string>
    <string name="storage">Storage</string>
    <string name="info">Information</string>
    <string name="init">Add device</string>
    <string name="choose">Choose</string>
    <string name="book_device">Book device</string>

    <string name="book_bunt_text">Book</string>
    <string name="fromTV">From</string>
    <string name="toTv">To</string>
    <string name="chooseTimeLable">Choose time for booking</string>
    <string name="calendar">Calendar</string>
    <string name="why_message">For what do you need this device?</string>
    <string name="delete_title">Do you want to delete this booking</string>
    <string name="delete_booking">Yes</string>
    <string name="dont_delete_booking">No</string>
    <string name="bookin_removed">Booking was deleted</string>
    <string name="conflict_title">There is a conflict with another booking</string>
    <string name="this_booking_is_reserved">Device is booked by</string>
    <string name="this_booking_is_reserved_from">from</string>
    <string name="this_booking_is_reserved_to">to</string>
    <string name="take_device_now">Go to calendar</string>
    <string name="dont_take_a_device">Take anyway</string>
    <string name="renew_bunt">Renew</string>
    <string name="renew_error">Can not renew current booking</string>
    <string name="nearby_booking_message">Closest booking for today in</string>
    <string name="note">Note</string>
    <string name="add_new_note">Add the note about device</string>
    <string name="storage_empty">Empty</string>


    <string name="problem_title">Write your problem</string>
    <string name="problem_message">Your report will helps us</string>
    <string name="exit">Exit</string>
    <string name="send">Подтвердить</string>
    <string name="reportMessage">Write what do you think</string>
    <string name="reportMessSuc">Repost was sent</string>

</resources>
