<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:id="@+id/fragment_back_device">
    <ImageView
            android:scaleType="centerCrop"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/alarm_clock"
            android:id="@+id/starsImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="83dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/logoTv"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:textColor="@color/label_colour"
            android:text="|"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/lineTv"
            app:layout_constraintStart_toEndOf="@+id/logoTv"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            app:layout_constraintTop_toTopOf="@+id/logoTv"/>
    <TextView
            android:textColor="@color/label_colour"
            android:text="@string/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:id="@+id/deviceNameTv"
            app:layout_constraintStart_toEndOf="@+id/lineTv"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp" android:layout_marginTop="19dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:text="@string/time_choose_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/starsImageView" app:layout_constraintHorizontal_bias="0.5"
            android:id="@+id/youTakeDeviceLabelTv"/>


    <Button
            android:text="@string/oneHour"
            style="@style/timePickBut"

            android:id="@+id/oneHourBut"
            app:layout_constraintEnd_toStartOf="@+id/starsImageView" android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/youTakeDeviceLabelTv"/>
    <Button
            android:text="@string/twoHour"
            style="@style/timePickBut"
            android:id="@+id/twoHourBut"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/youTakeDeviceLabelTv"
            app:layout_constraintStart_toEndOf="@+id/oneHourBut" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            style="@style/timePickBut"
            android:text="@string/foutHour"
            android:id="@+id/fourHourBut" app:layout_constraintStart_toStartOf="@+id/oneHourBut"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/oneHourBut"/>
    <Button
            style="@style/timePickBut"
            android:text="@string/tillSevenOClock"
            android:id="@+id/allDayBut" app:layout_constraintEnd_toEndOf="@+id/twoHourBut"
            app:layout_constraintTop_toTopOf="@+id/fourHourBut"/>
    <Button

            android:text="@string/twoDays"
            style="@style/timePickBut"
            android:id="@+id/twoDaysBut" app:layout_constraintStart_toStartOf="@+id/fourHourBut"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/fourHourBut"/>
    <Button
            style="@style/timePickBut"
            android:text="@string/anotherTime"
            android:id="@+id/anotherTimeBut" app:layout_constraintEnd_toEndOf="@+id/allDayBut"
            app:layout_constraintTop_toTopOf="@+id/twoDaysBut"/>


    <Button
            android:background="@drawable/round_but"
            android:text="@string/take_bunt_text"
            android:layout_width="264dp"
            android:layout_height="40dp"
            style="@style/goInButton"
            android:id="@+id/takeDevice"
            app:layout_constraintStart_toStartOf="@+id/twoDaysBut" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/anotherTimeBut" android:layout_marginRight="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/twoDaysBut"/>


</androidx.constraintlayout.widget.ConstraintLayout>