<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
              android:id="@+id/fragment_history_menu_bottom"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/create_booking_bg"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:layout_marginTop="15dp"
            android:text="@string/problem_title"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:layout_marginTop="15dp"
            android:text="@string/problem_message"
            android:layout_gravity="center_horizontal"
    />


    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/toggleButton3"/>
    <Switch
            android:text="Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/switch2"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/android_icon" android:id="@+id/imageView2"/>






    <Button
            android:background="@drawable/round_but"
            android:text="@string/book_bunt_text"
            android:layout_width="264dp"
            android:layout_height="40dp"
            style="@style/goInButton"
            android:id="@+id/bookBut"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
    />

</LinearLayout>