<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
              android:id="@+id/fragment_history_menu_bottom"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/create_booking_bg"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:layout_marginTop="15dp"
            android:text="@string/chooseTimeLable"
            android:layout_gravity="center_horizontal"
    />
    <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal" android:gravity="center"
            android:id="@+id/fromLL"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/smallTextColour"
                android:gravity="center_horizontal"
                android:text="@string/fromTV"
                android:layout_marginRight="20dp"
        />
        <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
               app:picker_textSize="16dp"
                android:id="@+id/fromDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:picker_curved="true"
                app:picker_cyclic="true"
                app:picker_visibleItemCount="7"
               app:picker_textColor="@color/smallTextColour"
               app:picker_selectedTextColor="@color/smallTextColour"
               app:picker_selectorColor="@color/edit_text_focus_view"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" android:gravity="center"
            android:id="@+id/toLL"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/smallTextColour"
                android:gravity="center_horizontal"
                android:text="@string/toTv"
                android:layout_marginRight="20dp"
        />
        <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                app:picker_textSize="16dp"
                android:id="@+id/toDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:picker_curved="true"
                app:picker_cyclic="true"
                app:picker_visibleItemCount="5"
                app:picker_textColor="@color/smallTextColour"
                app:picker_selectedTextColor="@color/smallTextColour"
                app:picker_selectorColor="@color/edit_text_focus_view"
        />
    </LinearLayout>

    <Button
            android:background="@drawable/round_but"
            android:text="@string/book_bunt_text"
            android:layout_width="264dp"
            android:layout_height="40dp"
            style="@style/goInButton"
            android:id="@+id/bookBut"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
    />

</LinearLayout>