<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:id="@+id/fragment_back_device">
    <ImageView
            android:scaleType="centerCrop"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@mipmap/icons_thanks"
            android:id="@+id/thanksView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            style="@style/label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/logoTv"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/lineTv" android:layout_marginRight="5dp"
            android:layout_marginTop="23dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:textColor="@color/label_colour"
            android:text="|"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/lineTv"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@+id/deviceNameTv" android:layout_marginRight="5dp"
            app:layout_constraintTop_toTopOf="@+id/deviceNameTv"/>
    <TextView
            android:textColor="@color/label_colour"
            android:text="@string/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:id="@+id/deviceNameTv"
            app:layout_constraintTop_toTopOf="@+id/logoTv" android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="110dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="34sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:text="@string/inParkBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/thanksView" app:layout_constraintHorizontal_bias="0.5"
            android:id="@+id/youTakeDeviceLabelTv"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:text="@string/chargeDeviceMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/youTakeDeviceLabelTv"/>


</androidx.constraintlayout.widget.ConstraintLayout>