<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:id="@+id/fragment_back_device">
    <ImageView
            android:scaleType="centerCrop"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/face_with_star_eyes"
            android:id="@+id/thanksView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"/>

    <include
            layout="@layout/logo_and_info"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:text="@string/youTableDeviceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/thanksView" app:layout_constraintHorizontal_bias="0.5"
            android:id="@+id/youTakeDeviceLabelTv"/>

    <LinearLayout
            android:id="@+id/dataLinerL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/youTakeDeviceLabelTv"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/dateToBack"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="65dp"
                android:paddingRight="65dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/smallTextColour"
                android:gravity="center_horizontal"
                android:text="19:00\n14 июля"/>
    </LinearLayout>


    <Button
            android:background="@drawable/round_but"
            android:text="@string/give_back_bunt_text"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            style="@style/goInButton"
            android:id="@+id/giveBackBut"
            tools:layout_editor_absoluteY="407dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/dataLinerL"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/smallTextColour"
            android:text="@string/returnMessage"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/giveBackBut" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>